test/classes/delete-free/lifetimes/arr-ref.good
arr-ref.chpl:4: In function 'badReturnRefLocalArrayElement':
arr-ref.chpl:7: error: Reference to scoped variable cannot be returned
arr-ref.chpl:5: note: consider scope of A
